--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -4,6 +4,7 @@
     display: flex;
     height: 100%;
     width: 100%;
+    padding-top: 100px;
     flex-direction: column;
     align-content: center;
     justify-content: center;
