--- a/src/pages/Main/ChatModal.css
+++ b/src/pages/Main/ChatModal.css
@@ -101,3 +101,29 @@
     cursor: pointer;
     border-radius: 5px;
 }
+
+/* 대화 종료 버튼 */
+.chat-end-btn {
+    width: 100%;
+    padding: 10px;
+    font-size: 25px;
+    background: #ff4f4f;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-bottom: 0px;
+    animation: fade-in 0.3s ease-in-out;
+}
+
+/* 페이드인 애니메이션 */
+@keyframes fade-in {
+    from {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
