--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -110,19 +110,20 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-left: 80px;
+    padding: 10px;
+    padding-left: 70px;
     width: 200px;
-    height: 160px;
     background-color: white;
 }
 
 .clothes-info{
     display: flex;
+    flex-direction: row;
     align-items: center;
 }
 
 .clothes-info div{
-    margin-left: 5px;
+    margin-left: 10px;
     font-family: Lobster;
     font-size: 20px;
 }
