--- a/src/pages/Search/itemstyles.css
+++ b/src/pages/Search/itemstyles.css
@@ -1,26 +1,39 @@
 .ItemCard {
   font-family: Roboto;
-  width: 311px;
-  height: 456px;
-  border: 3px solid gray;
-  border-radius: 20px 20px 20px 20px;
+  width: 18vw;
+  height: auto;
+  border: 0.2vw solid gray;
+  border-radius: 1.2vw;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .itemcover {
+  width: 100%;
+  aspect-ratio: 4 / 5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  background-color: #f0f0f0;
 }
 
 .itemcover img {
-  width: 311px;
-  height: 373px;
-  border-radius: 20px 20px 0px 0px;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  border-radius: 1.2vw 1.2vw 0 0;
 }
 
 .info {
-  width: 311px;
-  height: 78px;
+  width: 100%;
   background-color: #ecedee;
-  border-top: 3px dashed gray;
-  border-radius: 0px 0px 20px 20px;
+  border-top: 0.2vw dashed gray;
+  border-radius: 0 0 1.2vw 1.2vw;
+  padding: 0.5vw;
+  text-align: center;
 }
 
 .itemHeader {
@@ -31,29 +44,29 @@
 }
 
 .itemname {
-  margin: 12px 0px 0px 12px;
-  font-size: 20px;
+  margin: 0.7vh 0 0 0.7vw;
+  font-size: 1.2vw;
   font-weight: bold;
 }
 
 .itemtags {
   display: flex;
-  margin-top: 12px;
-  margin-right: 5px;
+  margin-top: 0.7vh;
+  margin-right: 0.5vw;
   list-style: none;
 }
 
 .tag {
   background-color: #b6c1cc;
-  margin-right: 6px;
-  padding: 2px;
-  border-radius: 5px;
-  font-size: 15px;
+  margin-right: 0.4vw;
+  padding: 0.2vw;
+  border-radius: 0.3vw;
+  font-size: 0.9vw;
 }
 
 .itemsite {
   display: flex;
-  font-size: 15px;
-  padding: 5px 0px 15px 12px;
+  font-size: 0.9vw;
+  padding: 0.5vh 0 1vh 0.7vw;
   text-align: left;
 }
