--- a/src/pages/Search/searchstyles.css
+++ b/src/pages/Search/searchstyles.css
@@ -1,36 +1,49 @@
+.Search {
+  font-family: sans-serif;
+  display: flex;
+}
+
 .background {
-  width: 100%;
-  height: 100%;
+  margin: 0;
+  width: 100vw; /* 전체 뷰포트 너비 */
   background-color: #f5f6f8;
 }
 
 .mainground {
-  margin: 0px 108px;
+  margin: 0 auto;
+  width: 87.5%;
   background-color: white;
 }
 
 .top {
-  height: 54px;
+  width: 100%;
+  height: 3.1vh;
   background-color: #f1ecea;
 }
 
+.menu {
+  margin: 2vh auto 0;
+  width: 70%; /* 1200px / 1720px ≈ 70% */
+  height: 15vh; /* 170px 기준 */
+}
 
 .body {
-  margin: 20px 0px 0px 162px;
-  width: 1100px;
-  height: 1650px;
+  margin: 2vh auto 0;
+  margin-top: 4%;
+  width: 70%; 
+  height: 96vh; 
 }
 
 .pagination {
-  margin: 20px 0px 0px 550px;
-  width: 2dvh;
+  margin: 2vh auto 0;
+  width: auto;
+  text-align: center;
 }
 
 .page-number {
-  font-size: 20px;
+  font-size: 15px;
   cursor: pointer;
-  margin: 0 5px;
-  margin-left: 8px;
+  margin: 0 0.5vw;
 }
 
 .page-number.active {
@@ -39,7 +52,7 @@
 }
 
 .pagetype {
-  font-size: 30px;
+  font-size: 2vw;
   font-weight: bold;
   text-align: center;
 }
@@ -47,15 +60,15 @@
 .category {
   display: flex;
   justify-content: center;
-  gap: 20px;
-  margin-top: 10px;
+  gap: 1.2vw;
+  margin-top: 1vh;
 }
 
 .category .type {
   cursor: pointer;
   display: flex;
-  margin: 5px 0px 10px 0px;
-  font-size: 16px;
+  margin: 0.5vh 0;
+  font-size: 1.2vw;
   text-align: center;
 }
 
@@ -63,18 +76,19 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 1065px;
-  height: 40px;
+  width: 100%;
+  height: 5vh;
   border-top: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
-  margin-top: 10px;
+  margin-top: 1vh;
 }
 
 .subType {
   flex: 1;
   text-align: center;
-  padding: 10px 0;
+  padding: 1vh 0;
   cursor: pointer;
+  font-size: 14px;
   transition: background-color 0.3s ease;
 }
 
@@ -86,6 +100,6 @@
 .section-one {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
-  margin-bottom: 60px;
+  gap: 1vw;
+  margin-bottom: 5vw;
 }
